--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "Crawl4AI"
 dynamic = ["version"]
 description = "🚀🤖 Crawl4AI: Open-source LLM Friendly Web Crawler & scraper"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = "Apache-2.0"
 authors = [
     {name = "Unclecode", email = "unclecode@kidocode.com"}
@@ -45,7 +45,8 @@ dependencies = [
     "humanize>=4.10.0",
     "lark>=1.2.2",
     "alphashape>=1.3.1",
-    "shapely>=2.0.0"
+    "shapely>=2.0.0",
+    "scipy>=1.14.1"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
